Changelog for Miosix np embedded OS

v1.60
- Added support for stm32f2 and stm3220g-eval
- Renamed arch/cortexM4_stm32 to arch/cortexM4_stm32f4 for consistency
- Refactored the arch/ directory to avoid code duplication
- Breaking change in the Makefiles
v1.59
- Added arch/cortexM4_stm32 architecture. The current GCC used to build Miosix
  does not yet support the M4 but since the instruction set is backward
  compatible the kernel is currently compiled with -mcpu=cortex-m3. This
  means that floating point operations are still emulated in software, and will
  be fixed when the compiler is upgraded.
- Added a couple of examples, including one using BufferQueue to synchronize
  between a thread and a DMA.
- Added test to testsuite for BufferQueue
- Refactored top level directory, now the testsuite and examples have
  been moved in their directories within the miosix directory
- Improved Queue class
- Added class BufferQueue to simplify the development of double buffered
  data transfers between threads and interrupt routines
- Some const-ness fixes in util
- Extended boot improvements to strive mini board
- Forgot to add util/crc16.cpp to the makefile buid rules
- New target board: Strive. Thanks to Yury Kuchura for contributing the code.
- Improved Thread::join(): when joining a thread, deallocate all its resources
  immeadiately.
- Added tests to testsuite for endianness.h
- Added interfaces/endianness.h with optimized functions to convert to/from
  lille/big endian, as well as byte swapping.
- Improved boot speed by replacing for loops to initialize .data, .bss and
  to initialize the stack of threads with memset/memcpy.
- Improved getMiosixVersion(), new format contains more information, including
  board name, build date and compiler version.
- The files binutils-2.21.tar.bz2 and gdb-7.0.tar.bz2 no longer exist on the
  ftp.gnu.org and mirrors.kernel.org, and this broke the compiler installation
  script. Fixed by downloading binutils-2.21.1 and gdb-7.0.1a.